--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>org.example</groupId>
     <artifactId>HW_MAV</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>db</module>
+        <module>api</module>
+        <module>services</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
